--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "uuid": "^11.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
