--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cra-template-typescript": "1.2.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
+    "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
