--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.0",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/react": "^19.0.7",
@@ -21,6 +21,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^5.7.3",
     "uuid": "^11.0.5"
   },
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.14"
+    "@types/lodash": "^4.17.14",
+    "@types/redux-persist": "^4.0.0"
   }
 }
