--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react-dom": "^19.0.3",
     "axios": "^1.7.9",
     "cra-template-typescript": "1.2.0",
+    "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.1.3",
