--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^7.1.3",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.2.4",
     "typescript": "^5.7.3",
     "uuid": "^11.0.5"
   },
